--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>Welcome to My Test Page</h1>
+    <ul>
+        <li>bullet 1</li>
+        <li>bullet 2</li>
+        <li>bullet 3</li>
+        <li>bullet 4</li>
+    </ul>
 </body>
 </html>
